Fixed js spacing and now light box works

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html {
   font: normal 100%/1.5 sans-serif;
   font-family: 'Source Sans Pro', sans-serif; 
   color: #fff;
+  overflow-x: hidden;
 }
 
 *, *::before, *::after {
@@ -272,33 +273,19 @@ h1:hover {
     margin: 0 auto;
 }
 
-.tap-target {
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-}
 
-.tap-target.switch-bg {
-  background-color: url(../images/posterinfinity.jpg);
-}
-
-.tap-target.switch-bg {
-  background-image: url(../images/ironman.jpg);
-}
-
-
-//*
 .lightbox {
     position: fixed;
-    left: 100%;
-    right: -100%;
+    left: -100%;
+    right: 100%;
     top: 0;
     bottom: 0;
-    background-color: rgba (0,0,0,0.5);
-    display: none;
+    background-color: rgba(0,0,0,0.5);
+    transition: all 200ms ease-out;
+
 }
 
-.lightbox [data-state="visible"] {
-    display: block;
+.lightbox[data-state="visible"] {
     left: 0;
     right: 0;
 }
@@ -325,7 +312,6 @@ h1:hover {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
-*//
 
 
 
@@ -333,6 +319,7 @@ h1:hover {
     background-color: #F1B45E;
     background-image: url("../images/lightbulb-bg.svg");
 }
+
 .view-first {
     position: relative;
     -webkit-transition: all 0.3s ease-in-out;
